# Projekt3-Sygnaly

./: CMakeLists.txt  Projekt3-info.txt  README.md  pyproject.toml
raport/: oddanie_projektu.ipynb  oddanie_projektu_FINAL.ipynb
src/: bindings.cpp  energy.cpp  energy.hpp  filtering.cpp  filtering.hpp  fourier.cpp  fourier.hpp  generator.cpp  generator.hpp  peak_detection.cpp  peak_detection.hpp  signal_processing.cpp  signal_processing.hpp  visualization.cpp  visualization.hpp
tests/: test_basic.py
